fix(countdown): fix gap dissappeared when hide countdown

--- a/src/pages/bilibili/style.module.scss
+++ b/src/pages/bilibili/style.module.scss
@@ -1,4 +1,5 @@
 .bilibili-container {
+  padding-top: 24px;
   .group-container {
     .group-label {
       margin-left: 24px;
