--- a/src/pages/common/countdown-display/style.module.scss
+++ b/src/pages/common/countdown-display/style.module.scss
@@ -1,5 +1,4 @@
 .container {
-  margin-top: 24px;
   width: 100%;
   .countdown-container {
     cursor: pointer;
